--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,5 +1,5 @@
 apply plugin: 'com.android.application'
-
+apply plugin: 'android-apt'
 android {
     compileSdkVersion 25
     buildToolsVersion "24.0.1"
@@ -26,7 +26,28 @@ dependencies {
     compile 'com.arello-mobile:moxy:1.1.1'
     provided 'com.arello-mobile:moxy-compiler:1.1.1'
     compile 'com.arello-mobile:moxy-app-compat:1.1.1'
-
+    //butter knife
+    compile 'com.jakewharton:butterknife:8.1.0'
+    apt 'com.jakewharton:butterknife-compiler:8.1.0'
+    //retrofit2
+    compile 'com.squareup.retrofit2:retrofit:2.0.0-beta4'
+    compile 'com.squareup.retrofit2:adapter-rxjava:2.0.0-beta4'
+    compile 'com.squareup.retrofit2:converter-gson:2.0.0-beta4'
+    //rx
+    compile 'io.reactivex:rxjava:1.0.14'
+    compile 'io.reactivex:rxandroid:1.0.1'
+    //material
+    compile 'com.android.support:design:25.0.0'
+    compile 'com.android.support:recyclerview-v7:25.0.0'
+    compile 'com.android.support:appcompat-v7:25.0.0'
+    compile 'com.android.support:support-v4:25.0.0'
+    compile 'com.android.support:cardview-v7:25.0.0'
+    //images
+    compile 'com.squareup.picasso:picasso:2.5.2'
+    //di
+    compile "com.google.dagger:dagger:2.5"
+    apt "com.google.dagger:dagger-compiler:2.5"
+    provided 'org.glassfish:javax.annotation:3.1.1'
 
 
     compile fileTree(dir: 'libs', include: ['*.jar'])
