--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,5 +1,5 @@
 apply plugin: 'com.android.application'
-apply plugin: 'android-apt'
+apply plugin: 'com.neenbedankt.android-apt'
 android {
     compileSdkVersion 25
     buildToolsVersion "24.0.1"
@@ -45,10 +45,9 @@ dependencies {
     //images
     compile 'com.squareup.picasso:picasso:2.5.2'
     //di
-    compile "com.google.dagger:dagger:2.5"
-    apt "com.google.dagger:dagger-compiler:2.5"
-    provided 'org.glassfish:javax.annotation:3.1.1'
-
+    compile 'com.google.dagger:dagger:2.5'
+    apt 'com.google.dagger:dagger-compiler:2.5'
+    provided 'javax.annotation:jsr250-api:1.0'
 
     compile fileTree(dir: 'libs', include: ['*.jar'])
     androidTestCompile('com.android.support.test.espresso:espresso-core:2.2.2', {
