--- a/src/main/AndroidManifest.xml
+++ b/src/main/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android">
 
     <application>
-        <activity android:name="com.example.bikal.generaltemplate.ui.activity.blank.MainActivity"/>
+        <activity android:name="com.example.techmas.androidteamplate.activity.blank.MainActivity"/>
     </application>
 </manifest>
