--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-          package="com.example.techmas.androidteamplate">
+          package="ru.techmas.androidteamplate">
 
 
     <uses-permission android:name="android.permission.INTERNET" />
@@ -25,7 +25,7 @@
 
 
     <application
-        android:name="ru.example.techmas.androidteamplate.App"
+        android:name="ru.techmas.androidteamplate.App"
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
@@ -33,7 +33,7 @@
         android:launchMode="singleTop"
         android:largeHeap="true"
         android:theme="@style/AppTheme">
-        <activity android:name="ru.example.techmas.androidteamplate.activity.MainActivity">
+        <activity android:name="ru.techmas.androidteamplate.activity.MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN"/>
 
