--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -35,7 +35,7 @@
         android:theme="@style/AppTheme">
 
         <activity
-            android:name=".activity.SplashActivity"
+            android:name=".activities.SplashActivity"
             android:theme="@style/SplashScreen">
 
             <intent-filter>
@@ -44,7 +44,7 @@
             </intent-filter>
         </activity>
 
-        <activity android:name="ru.techmas.androidteamplate.activity.MainActivity"/>
+        <activity android:name="ru.techmas.androidteamplate.activities.MainActivity"/>
 
     </application>
 
