--- a/src/main/AndroidManifest.xml
+++ b/src/main/AndroidManifest.xml
@@ -10,7 +10,7 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android">
 
 <application>
-    <activity android:name="ru.techmas.burgerking.activities.blank.SplashActivity"/>
+    <activity android:name="ru.techmas.androidtemplate.activities.blank.SplashActivity"/>
 </application>
 </manifest>
     >>>>>>> Added
