--- a/app/build.gradle
+++ b/app/build.gradle
@@ -79,7 +79,13 @@ dependencies {
     provided 'javax.annotation:jsr250-api:1.0'
     //bus
     compile 'org.greenrobot:eventbus:3.0.0'
-    //retrolambda
+
+    //decoro mask
+    //compile 'ru.tinkoff.decoro:decoro:1.3.2'
+
+    //circleImageView
+    //compile 'de.hdodenhof:circleimageview:1.3.0'
+
 
     compile fileTree(dir: 'libs', include: ['*.jar'])
     androidTestCompile('com.android.support.test.espresso:espresso-core:2.2.2', {
