--- a/app/build.gradle
+++ b/app/build.gradle
@@ -86,6 +86,11 @@ dependencies {
     //circleImageView
     //compile 'de.hdodenhof:circleimageview:1.3.0'
 
+    //image cropper
+    //compile 'com.theartofdev.edmodo:android-image-cropper:2.3.1'
+
+    //cookieJar
+//    compile 'com.github.franmontiel:PersistentCookieJar:v1.0.1'
 
     compile fileTree(dir: 'libs', include: ['*.jar'])
     androidTestCompile('com.android.support.test.espresso:espresso-core:2.2.2', {
