--- a/app/build.gradle
+++ b/app/build.gradle
@@ -3,7 +3,7 @@ apply plugin: 'com.neenbedankt.android-apt'
 apply plugin: 'me.tatarka.retrolambda'
 android {
     compileSdkVersion 25
-    buildToolsVersion "25.0.2"
+    buildToolsVersion "25.0.3"
     defaultConfig {
         applicationId "ru.techmas.androidtemplate"
         minSdkVersion 15
@@ -47,35 +47,47 @@ android {
         targetCompatibility 1.8
         sourceCompatibility 1.8
     }
+
+    packagingOptions {
+        exclude 'META-INF/rxjava.properties'
+    }
 }
+
+ext.versionRetrofit = '2.1.0'
+ext.versionOkHttp = '3.5.0'
+ext.versionMaterial = '25.3.1'
+ext.versionMoxy = '1.5.1'
+ext.versionDagger = '2.5'
 
 dependencies {
 
     //moxy mvp
-    compile 'com.arello-mobile:moxy:1.4.6'
-    provided 'com.arello-mobile:moxy-compiler:1.4.6'
-    compile 'com.arello-mobile:moxy-app-compat:1.4.6'
-    compile 'com.arello-mobile:moxy-android:1.4.6'
+    compile "com.arello-mobile:moxy:$versionMoxy"
+    provided "com.arello-mobile:moxy-compiler:$versionMoxy"
+    compile "com.arello-mobile:moxy-app-compat:$versionMoxy"
+    compile "com.arello-mobile:moxy-android:$versionMoxy"
     //retrofit2
-    compile 'com.squareup.retrofit2:retrofit:2.1.0'
-    compile 'com.squareup.retrofit2:adapter-rxjava:2.1.0'
-    compile 'com.squareup.retrofit2:converter-gson:2.1.0'
-    compile 'com.squareup.okhttp3:okhttp:3.5.0'
-    compile 'com.squareup.okhttp3:logging-interceptor:3.5.0'
+    compile "com.squareup.retrofit2:retrofit:$versionRetrofit"
+    compile "com.squareup.retrofit2:adapter-rxjava:$versionRetrofit"
+    compile "com.squareup.retrofit2:converter-gson:$versionRetrofit"
+    compile "com.squareup.okhttp3:okhttp:$versionOkHttp"
+    compile "com.squareup.okhttp3:logging-interceptor:$versionOkHttp"
     //rx
-    compile 'io.reactivex:rxjava:1.1.5'
-    compile 'io.reactivex:rxandroid:1.0.1'
+    compile 'io.reactivex.rxjava2:rxjava:2.0.2'
+    compile 'io.reactivex.rxjava2:rxandroid:2.0.1'
+    compile 'com.jakewharton.retrofit:retrofit2-rxjava2-adapter:1.0.0'
+
     //material
-    compile 'com.android.support:design:25.1.0'
-    compile 'com.android.support:recyclerview-v7:25.1.0'
-    compile 'com.android.support:appcompat-v7:25.1.0'
-    compile 'com.android.support:support-v4:25.1.0'
-    compile 'com.android.support:cardview-v7:25.1.0'
+    compile "com.android.support:design:$versionMaterial"
+    compile "com.android.support:recyclerview-v7:$versionMaterial"
+    compile "com.android.support:appcompat-v7:$versionMaterial"
+    compile "com.android.support:support-v4:$versionMaterial"
+    compile "com.android.support:cardview-v7:$versionMaterial"
     //images
     compile 'com.squareup.picasso:picasso:2.5.2'
     //di
-    compile 'com.google.dagger:dagger:2.5'
-    apt 'com.google.dagger:dagger-compiler:2.5'
+    compile "com.google.dagger:dagger:$versionDagger"
+    apt "com.google.dagger:dagger-compiler:$versionDagger"
     provided 'javax.annotation:jsr250-api:1.0'
     //bus
     compile 'org.greenrobot:eventbus:3.0.0'
@@ -96,6 +108,6 @@ dependencies {
     androidTestCompile('com.android.support.test.espresso:espresso-core:2.2.2', {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
-    compile 'com.android.support:appcompat-v7:25.1.0'
+    compile 'com.android.support:appcompat-v7:25.3.1'
     testCompile 'junit:junit:4.12'
 }
