--- a/app/build.gradle
+++ b/app/build.gradle
@@ -89,8 +89,13 @@ dependencies {
     compile "com.google.dagger:dagger:$versionDagger"
     annotationProcessor "com.google.dagger:dagger-compiler:$versionDagger"
     provided 'javax.annotation:jsr250-api:1.0'
+
+    compile 'com.jakewharton.timber:timber:4.5.1'
     //bus
     compile 'org.greenrobot:eventbus:3.0.0'
+    testCompile 'org.robolectric:robolectric:3.1.1'
+    testCompile 'org.mockito:mockito-core:1.10.19'
+    testCompile 'org.powermock:powermock-api-mockito:1.6.5'
 
     //decoro mask
     //compile 'ru.tinkoff.decoro:decoro:1.3.2'
@@ -110,4 +115,5 @@ dependencies {
     })
     compile 'com.android.support:appcompat-v7:25.3.1'
     testCompile 'junit:junit:4.12'
+
 }
