--- a/app/build.gradle
+++ b/app/build.gradle
@@ -91,8 +91,10 @@ dependencies {
     provided 'javax.annotation:jsr250-api:1.0'
 
     compile 'com.jakewharton.timber:timber:4.5.1'
-    //bus
-    compile 'org.greenrobot:eventbus:3.0.0'
+    debugCompile 'com.squareup.leakcanary:leakcanary-android:1.5.1'
+    releaseCompile 'com.squareup.leakcanary:leakcanary-android-no-op:1.5.1'
+    testCompile 'com.squareup.leakcanary:leakcanary-android-no-op:1.5.1'
+
     testCompile 'org.robolectric:robolectric:3.1.1'
     testCompile 'org.mockito:mockito-core:1.10.19'
     testCompile 'org.powermock:powermock-api-mockito:1.6.5'
